//noinspection GradleDependency
apply plugin: 'com.android.application'
apply plugin: 'com.google.firebase.firebase-perf'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'maven-publish'
apply plugin: 'com.google.gms.google-services'




android {
    signingConfigs {

    }
    compileSdkVersion 33
    buildToolsVersion '30.0.3'

    useLibrary 'org.apache.http.legacy'
    useLibrary 'android.test.runner'
    useLibrary 'android.test.base'
    useLibrary 'android.test.mock'

    buildFeatures {
        buildConfig = true
    }
    defaultConfig {
        applicationId "com.stonefacesoft.ottaa"
        minSdkVersion 21
        targetSdkVersion 33
        versionCode 106
        versionName "6.7.16" //
        // Enabling multidex support.
        multiDexEnabled true
        resConfigs 'ar,en,es,it'
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"//
        testHandleProfiling true
        testFunctionalTest true
        testInstrumentationRunnerArguments clearPackageData: 'true'
    }

    bundle{
        language{
            enableSplit = false
        }
    }

    buildTypes {
        debug {
            minifyEnabled true
            applicationIdSuffix '.debug'
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            zipAlignEnabled true
            testCoverageEnabled true

        }
        sourceSets.debug.resources.srcDirs = ['src/debug/res']
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            zipAlignEnabled true
        }
        lintOptions {
            abortOnError false
            checkDependencies true
        }


    }
//    flavorDimensions "accessibility"
//    productFlavors {
//
//        demo {
//            // Assigns this product flavor to the "version" flavor dimension.
//            // If you are using only one dimension, this property is optional,
//            // and the plugin automatically assigns all the module's flavors to
//            // that dimension.
//            dimension "accessibility"
//            applicationIdSuffix ".demo"
//            versionNameSuffix "-demo"
//        }
//        full {
//            dimension "accessibility"
//            applicationIdSuffix ".full"
//            versionNameSuffix "-full"
//        }
//    }


//        packagingOptions {
//            exclude 'META-INF/LICENSE.txt'
//            exclude 'META-INF/NOTICE.txt'
//        }
    testOptions{
        unitTests.returnDefaultValues = true
        unitTests.includeAndroidResources true
        unitTests.all{
            jvmArgs '-XX:MaxPermSize=256m'
        }

    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
    namespace 'com.stonefacesoft.ottaa'

}

repositories {
    mavenCentral()
    maven() {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven { url "https://jitpack.io" }
    maven {
        url 'https://maven.google.com/'
        name 'Google'
    }
}
dependencies {

    //implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
    testImplementation 'org.json:json:20230227'
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:1.0.0@aar') {
        transitive = true
    }

    // Required -- JUnit 4 framework
    implementation files('libs/SimpleNLG-4.4.8.jar')
    implementation('com.google.dagger:dagger:2.45') {
        // exclude group: 'com.google.guava'
    }

    // Optional -- Mockito framework
    //androidx library
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.browser:browser:1.5.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation "androidx.core:core:1.9.0"
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.0'
    // places library
    implementation 'com.google.android.libraries.places:places:3.1.0'
    //play services library
    implementation 'com.google.android.gms:play-services-analytics:18.0.2'
    implementation 'com.google.android.gms:play-services-auth:20.5.0'
    implementation 'com.google.android.gms:play-services-base:18.2.0'
    implementation 'com.google.android.gms:play-services-location:21.0.1'
    implementation 'com.google.http-client:google-http-client:1.43.0'

    //implementation
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.airbnb.android:lottie:6.0.0'
    implementation group: 'com.google.apis', name: 'google-api-services-translate', version: 'v2-rev48-1.22.0'
    implementation group: 'com.google.api-client', name: 'google-api-client-gson', version: '2.2.0'
    implementation 'androidx.navigation:navigation-fragment:2.5.3'
    implementation 'androidx.navigation:navigation-ui:2.5.3'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:5.2.0'
    testImplementation 'org.robolectric:robolectric:4.9.2'
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.6'

    //Testing

    androidTestImplementation 'androidx.test:core:1.5.0'

    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'

    // AndroidJUnitRunner and JUnit Rules
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:rules:1.5.0'
    androidTestUtil 'androidx.test:orchestrator:1.4.2'

    // Assertions
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.ext:truth:1.5.0'
    androidTestImplementation 'com.google.truth:truth:1.1.3'

    // Espresso dependencies
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.5.1'
    androidTestImplementation 'androidx.test.espresso:espresso-web:3.5.1'
    androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.5.1'

    // The following Espresso dependency can be either "implementation"
    // or "androidTestImplementation", depending on whether you want the
    // dependency to appear on your APK's compile classpath or the test APK
    // classpath.
    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'


    // The following Espresso dependency can be either "implementation"
    // or "androidTestImplementation", depending on whether you want the
    // dependency to appear on your APK's compile classpath or the test APK
    // classpath.
    //
    implementation('com.google.code.findbugs:jsr305:3.0.2')
    implementation 'com.jakewharton:butterknife:10.2.3'

    //library
    implementation 'com.annimon:stream:1.2.2'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.github.skydoves:colorpickerpreference:2.0.6'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'

    // firebase library
    implementation platform('com.google.firebase:firebase-bom:31.5.0')
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.google.firebase:firebase-config:21.3.0'
    implementation 'com.google.firebase:firebase-core:21.1.1'
    implementation 'com.google.firebase:firebase-database:20.2.0'

    implementation ('com.google.firebase:firebase-messaging:23.1.2'){
        exclude group: 'com.android.support'
        exclude module: 'appcompat-v7'
        exclude module: 'support-v4'
        exclude module: 'support-v13'
    }

    implementation ('com.google.firebase:firebase-inappmessaging-display:20.3.1'){
        exclude group: 'com.android.support'
        exclude module: 'appcompat-v7'
        exclude module: 'support-v4'
        exclude module: 'support-v13'
    }
    
    implementation 'com.google.firebase:firebase-perf:20.3.1'
    implementation 'com.google.firebase:firebase-storage:20.1.0'
    implementation 'com.google.firebase:firebase-crashlytics:18.3.6'
    implementation 'com.google.firebase:firebase-analytics:21.2.2'

    implementation 'io.grpc:grpc-okhttp:1.53.0'
    
    // material library
    implementation 'com.google.android.material:material:1.8.0'
    //Guava library
    implementation('com.google.guava:guava:31.1-android')

    //Image Cropper
    implementation 'com.github.CanHub:Android-Image-Cropper:4.3.0'
    // pictograms library
    implementation 'com.github.OTTAA-Project:PictogramsLibrary:0.19.62'
    //Sendgrid integration
    implementation 'com.android.volley:volley:1.2.1'

    implementation 'com.google.android.exoplayer:exoplayer:2.18.6'
    implementation 'com.google.android.exoplayer:exoplayer-dash:2.18.6'
    implementation 'com.google.android.exoplayer:exoplayer-transformer:2.18.6'
    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.6'




}


configurations {
    all {
        exclude module: 'httpclient'
        exclude group: "com.google.protobuf", module: "protobuf-lite"
    }
}



/*
configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        def requested = details.requested
        if (requested.group == 'com.android.support') {
            if (!requested.name.startsWith("multidex")) {
                details.useVersion '25.3.0'
            }
        }
    }
}
*/
